<resources>
    <string name="app_name">EventDriven</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_image_description">Event Picture</string>
    <string name="event_name">Event Name</string>
    <string name="event_details">Event Details</string>
    <string name="event_location">İzmir</string>
    <string name="event_time">22:22</string>
    <string name="title_event">Events</string>
    <string name="title_tickets">Tickets</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_event_name">Event Name=</string>
    <string name="create_event_page_name">EVENT CREATION</string>
    <string name="create_event_detail">Event Detail=</string>
    <string name="create_event_location">Event Location=</string>
    <string name="create_event_time">Event Time=</string>
    <string name="add_an_event">Add an event</string>
    <string name="add_an_event_title">Event Create</string>
    <string name="event_submit">Submit</string>
    <string name="create_event_date">Event Date=</string>
    <string name="row_column_text">Row Number=</string>
    <string name="column_number_text">Column Number=</string>
    <string name="ticket_price_text">Ticket Price=</string>
    <string name="event_date">23/12/23</string>
    <string name="event_details_dp">Event Details</string>
    <string name="event_name_dp">Khontkar Konseri</string>
    <string name="event_detail_dp_data">İzmir\'de harika sahne perfomansı sizi bekliyor.</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="event_price">Price</string>
    <string name="choose_seat_title">Choose Seat(s)</string>
    <string name="report_fragment_title">Report of Event</string>
    <string name="ticket_buying_title">Buy Ticket</string>
    <string name="event_detail_title">Event Detail</string>
</resources>