<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.huseyincan.eventdriven.controller.ui.events.EventsFragment"
        android:label="@string/title_event"
        tools:layout="@layout/fragment_events">
        <action
            android:id="@+id/action_navigation_home_to_addEventFragment"
            app:destination="@id/addEventFragment"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_home_to_eventDetailFragment"
            app:destination="@id/eventDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_tickets"
        android:name="com.huseyincan.eventdriven.controller.ui.tickets.TicketsFragment"
        android:label="@string/title_tickets"
        tools:layout="@layout/fragment_tickets" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.huseyincan.eventdriven.controller.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/addEventFragment"
        android:name="com.huseyincan.eventdriven.controller.ui.events.AddEventFragment"
        android:label="@string/add_an_event_title"
        tools:layout="@layout/fragment_add_event" />
    <fragment
        android:id="@+id/eventDetailFragment"
        android:name="com.huseyincan.eventdriven.controller.ui.events.EventDetailFragment"
        android:label="@string/event_detail_title"
        tools:layout="@layout/fragment_event_detail">
        <action
            android:id="@+id/action_eventDetailFragment_to_chooseSeatFragment"
            app:destination="@id/chooseSeatFragment" />
        <action
            android:id="@+id/action_eventDetailFragment_to_reportFragment"
            app:destination="@id/reportFragment" />
        <action
            android:id="@+id/action_eventDetailFragment_to_addEventFragment"
            app:destination="@id/addEventFragment" />
    </fragment>
    <fragment
        android:id="@+id/buyingFragment"
        android:name="com.huseyincan.eventdriven.controller.ui.events.BuyingFragment"
        android:label="@string/ticket_buying_title"
        tools:layout="@layout/fragment_buying">
        <action
            android:id="@+id/action_buyingFragment_to_navigation_tickets"
            app:destination="@id/navigation_tickets" />
    </fragment>
    <fragment
        android:id="@+id/chooseSeatFragment"
        android:name="com.huseyincan.eventdriven.controller.ui.events.ChooseSeatFragment"
        android:label="@string/choose_seat_title"
        tools:layout="@layout/fragment_choose_seat">
        <action
            android:id="@+id/action_chooseSeatFragment_to_buyingFragment"
            app:destination="@id/buyingFragment" />
    </fragment>
    <fragment
        android:id="@+id/reportFragment"
        android:name="com.huseyincan.eventdriven.controller.ui.events.ReportFragment"
        android:label="@string/report_fragment_title"
        tools:layout="@layout/fragment_report" />
</navigation>